5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1595_825.log
== TEST (2019-04-14 23:11:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import
r= float(input("valor do raio:"))
#a=Area de um circulo de raio r
a= pi*r**2
#v= volume da esfera de raio r
v=	4/38*pi*r**3
print(round(a,3))
print(round(v,3))
-- ERROR:
File "XXXX", line 4
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:12:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from <math> import
r= float(input("valor do raio:"))
#a=Area de um circulo de raio r
a= pi*r**2
#v= volume da esfera de raio r
v=	4/38*pi*r**3
print(round(a,3))
print(round(v,3))
-- ERROR:
File "XXXX", line 4
    from <math> import
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:12:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from<math>import
r= float(input("valor do raio:"))
#a=Area de um circulo de raio r
a= pi*r**2
#v= volume da esfera de raio r
v=	4/38*pi*r**3
print(round(a,3))
print(round(v,3))
-- ERROR:
File "XXXX", line 4
    from<math>import
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:13:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
r= float(input("valor do raio:"))
#a=Area de um circulo de raio r
a= pi*r**2
#v= volume da esfera de raio r
v=	4/38*pi*r**3
print(round(a,3))
print(round(v,3))
-- OUTPUT:
63.617
30.134
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:14:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
r= float(input("valor do raio:"))
#a=Area de um circulo de raio r
a= pi*r**2
#v= volume da esfera de raio r
v=	4/38*pi*r**3
print(round(a,3))
print(round(v,3))
-- EXECUTION TIME:
0.175233
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
30.134
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
621.401
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:14:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
r= float(input("valor do raio:"))
#a=Area de um circulo de raio r
a= pi*r**2
#v= volume da esfera de raio r
v=	4/38*pi*r**3
print(round(a,3))
print(round(v,3))
-- OUTPUT:
63.617
30.134
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:14:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
r= float(input("valor do raio:"))
#a=Area de um circulo de raio r
a= pi*r**2
#v= volume da esfera de raio r
v=	4/3*pi*r**3
print(round(a,3))
print(round(v,3))
-- EXECUTION TIME:
0.235916
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
